--- a/style.css
+++ b/style.css
@@ -91,8 +91,21 @@ body {
     margin-right: 10px;
 }
 
-.humadity,
+.humidity,
 .wind {
     font-size: 28px;
     margin-top: -6px;
+}
+
+.weather {
+    display: none;
+}
+
+.error {
+    text-align: left;
+    margin-left: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+    color: red;
+    display: none;
 }
